--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.centered-container {
-  @apply mx-auto px-5 md:px-14 max-w-screen-xl mt-8 mb-16;
-}
-
-.section {
-  @apply mt-8 mb-16;
+body {
+  font-family: "Lato";
 }
