Added carousel for services in mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,52 @@
 body {
   font-family: "Lato";
 }
+
+.slick-prev::before,
+.slick-next::before {
+  color: orange !important;
+  font-size: 2rem !important;
+}
+
+.slick-prev,
+.slick-next {
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 2;
+  top: 40% !important;
+}
+
+.slick-list {
+  width: 80%;
+  margin: 0 auto !important;
+}
+
+.slick-prev {
+  left: 2em;
+}
+
+.slick-next {
+  right: 0;
+}
+.slick-prev {
+  left: 7% !important;
+  z-index: 1;
+}
+.slick-next {
+  right: 7% !important;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .slick-prev {
+    left: 0% !important;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 2% !important;
+    z-index: 1;
+  }
+}
+.slick-slider .slick-slide {
+  padding: 0 15px;
+}
