--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,53 @@
 .section {
   @apply mt-8 mb-16;
 }
+
+.slick-prev::before,
+.slick-next::before {
+  color: #1c2e5e !important;
+  font-size: 2rem !important;
+}
+
+.slick-prev,
+.slick-next {
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 2;
+  top: 40% !important;
+}
+
+.slick-list {
+  @apply w-full md:w-[80%] my-0 mx-auto;
+}
+.slick-dots {
+  @apply my-8;
+}
+.slick-prev {
+  left: 2em;
+}
+
+.slick-next {
+  right: 0;
+}
+.slick-prev {
+  left: 7% !important;
+  z-index: 1;
+}
+.slick-next {
+  right: 7% !important;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .slick-prev {
+    left: 0% !important;
+    z-index: 1;
+  }
+  .slick-next {
+    right: 2% !important;
+    z-index: 1;
+  }
+}
+.slick-slider .slick-slide {
+  padding: 0 15px;
+}
